--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                                                                                                                    
+                                                                                                                                                        
     
     
     
@@ -35,8 +35,10 @@
     
     
     
-    <wb-module deploy-name="Acme-Recipes-22.8-22.8">
-                                                                                                                                                                                                                                                                                                        
+    
+    <wb-module deploy-name="Acme-Exam-September-22.8">
+                                                                                                                                                                                                                                                                                                                
+        
         
         
         
@@ -73,7 +75,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                        
+        
         
         
         
@@ -109,7 +112,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                        
+        
         
         
         
@@ -145,67 +149,6 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                                                                                                                                                                                                        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
-                                                                                                                                                                                        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
                                                                                                                                                                                                                                                                                                 
         
         
@@ -241,10 +184,75 @@
         
         
         
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
+                                                                                                                                                                                                
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+                                
+        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
+                                                                                                                                                                                                                                                                                                        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
         <property name="java-output-path" value="/Hello-World-22.0/target/classes"/>
-                
-        <property name="context-root" value="Acme-Recipes-22.8"/>
-                                                                                                                                                                                                                                                                                                    
+        <property name="context-root" value="Acme-Exam-September"/>
+                                                                                                                                                                                                                                                                                                            
+    
     
     
     
@@ -281,7 +289,8 @@
     
     
     </wb-module>
-                                                                                                                                                
+                                                                                                                                                    
+
 
 
 
